--- a/AI Lab 4/Lab 4.ipynb
+++ b/AI Lab 4/Lab 4.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a65cf54f",
    "metadata": {},
    "outputs": [
@@ -109,28 +109,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original: My name is Kamran.I am from Lahore\n",
-      "Sorted: Kamran.I Lahore My am from is name\n"
+      "Original: My name is Kamran I am from Lahore\n",
+      "Sorted: I Kamran Lahore My am from is name\n"
      ]
     }
    ],
    "source": [
-    "def sort_sentence(text):\n",
-    "    words = text.split()\n",
-    "    words.sort(key=lambda w: ord(w[0]))\n",
-    "\n",
-    "    return \" \".join(words)\n",
-    "\n",
     "sentence = \"My name is Kamran I am from Lahore\"\n",
+    "\n",
+    "words = sentence.split()\n",
+    "\n",
+    "ascii_values = []\n",
+    "for w in words:\n",
+    "    ascii_values.append(ord(w[0]))\n",
+    "\n",
+    "for i in range(len(ascii_values)):\n",
+    "    for j in range(i+1, len(ascii_values)):\n",
+    "        if ascii_values[i] > ascii_values[j]:\n",
+    "            ascii_values[i], ascii_values[j] = ascii_values[j], ascii_values[i]\n",
+    "            words[i], words[j] = words[j], words[i]\n",
+    "\n",
+    "sorted_sentence = \" \".join(words)\n",
+    "\n",
     "print(\"Original:\", sentence)\n",
-    "print(\"Sorted:\", sort_sentence(sentence))\n",
-    "\n"
+    "print(\"Sorted:\", sorted_sentence)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
