Remaining task added

--- a/AI Lab 5/Task  05.ipynb
+++ b/AI Lab 5/Task  05.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d7abb441",
    "metadata": {},
    "outputs": [
@@ -19,12 +19,9 @@
      "output_type": "stream",
      "text": [
       "Visiting: A\n",
-      "Visiting: B\n",
-      "Visiting: D\n",
-      "Visiting: E\n",
       "Visiting: C\n",
       "Goal: C found!\n",
-      "DFS Traversal: ['A', 'B', 'D', 'E', 'C']\n"
+      "DFS Traversal: ['A', 'C']\n"
      ]
     }
    ],
@@ -141,14 +138,6 @@
     "x = [node.value for node in visited_nodes]\n",
     "print(\"DFS Stack:\", x)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ebf3247",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
